# sword

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: window.h
src/platform/glfw/: window.cpp
src/platform/sdl2/: window.cpp
